# waddleperf

./: .PLAN  .TODO  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PROGRESS_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.old
.claude/: README.md  app.md  flask-backend.md  kubernetes.md  mobile.md  orchestration.md  python.md  react.md  testing.md
.claude/.claude/: README.md  containers.md  database.md  go-backend.md  go.md  react.md  security.md  testing.md  webui.md
.github/workflows/: build-go-client.yml  containerclient.yml  managerserver-api.yml  managerserver-frontend.yml  managerserver.yml  release-goclient.yml  testserver.yml  unified-api.yml  version-release.yml  webclient-api.yml  webclient-frontend.yml  webclient.yml
.venv-test/: pyvenv.cfg
archive/: build.sh
archive/go-client/: Dockerfile.build  build-docker.sh  test-build.sh
archive/speedtest/: .dockerignore  Dockerfile  README.md
archive/website/: README.md  next.config.js  package.json  tailwind.config.js
containerClient/: .dockerignore  BUILD_SUMMARY.md  Dockerfile  README.md  client.py  docker-compose.example.yml  requirements.txt
containerClient/tests/: __init__.py  http_test.py  icmp_test.py  tcp_test.py  udp_test.py
database/: schema.sql
database/migrations/: 001_clean_slate_migration.py  02_add_config_and_tokens.sql  03_add_speedtest_type.sql
database/seeds/: 01_dev_data.sql
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEVELOPMENT.md  ENROLLMENT_FLOW.md  INSTALLATION.md  LICENSE.md  PRE_COMMIT.md  SECURITY.md  STANDARDS.md  TESTING.md  USAGE.md  WORKFLOWS.md  WORKFLOWS_EXTENDED.md
docs/standards/: API_PROTOCOLS.md  ARCHITECTURE.md  AUTHENTICATION.md  DATABASE.md  DOCUMENTATION.md  FRONTEND.md  INTEGRATIONS.md  KUBERNETES.md  MOBILE.md  (+6 more)
goClient/: .gitignore  BUILD.md  BUILD_SUMMARY.md  Dockerfile  Dockerfile.builder  README.md  RELEASE.md  build-all.sh  docker-build.sh
managerServer/: Dockerfile
shared/: README.md
shared/shared/py_libs/: pyproject.toml
shared/shared/py_libs/py_libs/grpc/: __init__.py
shared/shared/py_libs/py_libs/http/: client.py  correlation.py
shared/shared/py_libs/py_libs/validation/: datetime.py  network.py  password.py  string.py
shared/shared/py_libs/scripts/: lint.sh
testServer/: Dockerfile
webClient/: Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  init.sql
website/: package-lock.json
(+303 files in other folders)
